# graphiclity

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING_EXTENSIONS.md  README.md  ROADMAP.md
assets/docs/: examples.md
examples/: bouncing_rect.rs  brush.rs  hoverdrag.rs  inputs.rs  light.rs  mouse.rs  shapes.rs
src/: color.rs  config.rs  context.rs  graphics.rs  input.rs  lib.rs  runtime.rs  vector.rs
src/backends/: mod.rs  pixels.rs
src/extensions/: mod.rs
src/text/: font8x8.rs  mod.rs
