[package]
name = "graphiclity"
version = "0.1.0"
edition = "2024"
authors = ["BersisSe"]
license = "MIT"
keywords = ["gui","immediate", "graphics"]
description = "A Minimal Graphics Library "
categories = ["gui", "graphics"]
readme = "README.md"

[dependencies]
winit = {version ="0.30", features = ["rwh_05"]}
pixels = "0.14.0"
winit_input_helper = { version = "0.17.0"}